--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/img.jpg" alt="" width="270" height="260">
+                    <img src="./images/img.jpg" alt="дизайнер" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img (1).jpg" alt="" width="270" height="260">
+                    <img src="./images/img (1).jpg" alt="разработчик" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img (2).jpg" alt="" width="270" height="260">
+                    <img src="./images/img (2).jpg" alt="маркетолог" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img (3).jpg" alt="" width="270" height="260">
+                    <img src="./images/img (3).jpg" alt="дизайнер" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
