--- a/index.html
+++ b/index.html
@@ -5,92 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header class="page-header">
        <nav>
-            <a href="">WebStudio</a>
+            <a href="" class="logo"><span class="accent">Web</span>Studio</a>
 
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a class="link" href="">Студия</a></li>
+                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="">Контакты</a></li>
             </ul>
        </nav>
 
-        <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href=""></a>+38 096 111 11 11</li>
+        <ul class="site-contacts list">
+            <li><a href="" class="link">info@devstudio.com</a></li>
+            <li><a href="" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
-        <section>
+        <!-- Герой -->
+        <section class="hero">
              <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type=button>Заказать услугу</button>
+            <button class="button" type="button" >Заказать услугу</button>
          </section>
-        
-         <section>
+
+         <section class="section">
             <h2>Наши приемущества</h2>
-            <ul>
+            <ul class="list">
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="section-title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3 class="section-title">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3 class="section-title">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h3 class="section-title">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
-
-            <h2>Чем мы занимаемся</h2>
-            <ul>
+         </section>
+        
+         <section class="section-work">
+             <h2 class="section-title">Чем мы занимаемся</h2>
+            <ul class="list">
                 <li><img src="./images/box1.jpg" alt="Разработка ПО для ПК" width="370" height="294"></li>
                 <li><img src="./images/box2.jpg" alt="Разработка мобильных приложений" width="370" height="294"></li>
                 <li><img src="./images/box3.jpg" alt="Дизайн студия" width="370" height="294"></li>
             </ul>
+        </section>
 
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section-team">            
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/img.jpg" alt="дизайнер" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="section-title-name">Игорь Демьяненко</h3>
+                    <p class="section-team-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img(1).jpg" alt="разработчик" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="section-title-name">Ольга Репина</h3>
+                    <p class="section-team-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img(2).jpg" alt="маркетолог" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="section-title-name">Николай Тарасов</h3>
+                    <p class="section-team-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img(3).jpg" alt="дизайнер" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="section-title-name">Михаил Ермаков</h3>
+                    <p class="section-team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
-    <footer>
-        <a href="">WebStudio</a>
-        <address>
+    <footer class="footer">
+        <a class="logo" href=""><span class="accent">Web</span>Studio</a>
+        <address class="adress">
             г. Киев, пр-т Леси Украинки, 26
         </address>
-        <a href="">info@example.com</a><br>
-        <a href="">+38 099 111 11 11</a>
+        <a class="footer-link" href="">info@example.com</a><br>
+        <a class="footer-link" href="">+38 099 111 11 11</a>
     </footer>
 </body>
 </html>
